test/fails/bad_types/bad_assign1.lgl
void main() {
    a m = [[1., 2.], [2., 1.]];
}